# demoreel

./: .gitattributes  .gitignore  Cargo.toml  README.md  demo.py  pyproject.toml
.github/workflows/: CI.yml
src/: bin.rs  errors.rs  lib.rs  serialize.rs  tracer.rs
