[package]
name = "demoreel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "demoreel"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "demo-json"
path = "src/bin.rs"

[dependencies]
bitbuffer = "0.10.9"
error-chain = "0.12.4"
pyo3 = { version = "0.19"}
tf-demo-parser = { git = "https://github.com/demostf/parser.git", rev = "92d9be23" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_path = "0.6"
serde_arrow = { version = "0.7.1", features = ["arrow2-0-17"] }
pyo3-polars = "0.4.1"
polars = { version = "0.30.0", features = ["dtype-full"] }
arrow2 = "0.17.2"
itertools = "0.10.5"

[dev-dependencies]
pyo3 = { version = "0.19", features = ["auto-initialize"] }
